# perso-2025b-Juranqt

./: ArbitragemFunctions.hs  README (2).md  README.md  README1.md  arbitragem (1).hs  arbitragem.cabal  arbitragem.db  arbitragem.hs  index (2).html  index.html  teste.hs  testeMyFunctions.txt  testes (1).hs  testes.hs
.devcontainer/: Dockerfile (2).txt  Dockerfile.txt  devcontainer.json
