cabal-version:       >=1.10
name:                arbitragem
version:             0.1.0.0
build-type:          Simple
executable arbitragem
  main-is:           arbitragem.hs
  build-depends:     base >=4.7 && <5,
                     scotty,
                     sqlite-simple,
                     aeson,
                     text,
                     wai,
                     warp,
                     split,
                     http-types,
                     wai-extra
  default-language:  Haskell2010
